# Dear-PyGui

./: README.md  pyproject.toml  test.py
app/: main.py
callbacks/: console_window.py  main_window.py  transfer_window.py
callbacks/processing/: main_window.py  monitoring_window.py  transfer_window.py
callbacks/switch_window/: switch_window.py
service/: SSHProcessing.py
ssh_processing/: SSHProcessing.py  connect.py
view/: main.py
