[tool.poetry]
name = "paramicopractice"
version = "0.1.0"
description = ""
authors = ["NeZorinEgor <zorin-ep@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.4.0"
dearpygui = "^1.11.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
